# protheus_tables_web_scraper

./: README.md  protheus_tables.py  pyproject.toml
protheus_web_scraper/: protheus_tables_scraper.py
